[gd_scene load_steps=2 format=3 uid="uid://c6cl2ayvb4ms3"]

[ext_resource type="Script" uid="uid://drlrm6yoeyvls" path="res://scenes/instances/chart editor/convert_chart_popup.gd" id="1_byst7"]

[node name="Convert File Popup" type="Window"]
msaa_2d = 1
title = "Convert Chart File"
initial_position = 1
size = Vector2i(480, 520)
exclusive = true
unresizable = true
min_size = Vector2i(480, 0)
script = ExtResource("1_byst7")

[node name="SaveFolderDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
initial_position = 1
size = Vector2i(540, 400)
unresizable = true
always_on_top = true
min_size = Vector2i(320, 320)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2
root_subfolder = "res://"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Song Metadata Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Song Metadata"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="Song Title" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Song Title"

[node name="Song Credits" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Song Credits"

[node name="Difficulty" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Difficulty"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="Audio Files Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Audio Files"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Vocals File Location" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(312, 0)
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "Vocals File Location(s)"
editable = false

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select File Location"

[node name="Vocals File Dialog" type="FileDialog" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
title = "Open File(s)"
initial_position = 1
size = Vector2i(540, 400)
unresizable = true
always_on_top = true
min_size = Vector2i(320, 320)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 1
filters = PackedStringArray("*.mp3", "*.ogg")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Inst File Location" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(312, 0)
layout_mode = 2
size_flags_horizontal = 2
placeholder_text = "Instrumental File Location"
editable = false

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select File Location"

[node name="Inst File Dialog" type="FileDialog" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(540, 400)
unresizable = true
always_on_top = true
min_size = Vector2i(320, 320)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
filters = PackedStringArray("*.mp3", "*.ogg")

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="Chart File Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Chart File"

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Chart File Location" type="LineEdit" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(312, 0)
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "Chart File Location"
editable = false

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select File Location"

[node name="Chart File Dialog" type="FileDialog" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(540, 400)
unresizable = true
always_on_top = true
min_size = Vector2i(320, 320)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
root_subfolder = "res://"
filters = PackedStringArray("*.json")

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Chart Type Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(312, 0)
layout_mode = 2
size_flags_horizontal = 3
text = " Chart Type: N/A"
vertical_alignment = 1
text_overrun_behavior = 1

[node name="Chart Type Button" type="OptionButton" parent="VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(156, 0)
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 1
clip_text = true
selected = 0
fit_to_longest_item = false
item_count = 5
popup/item_0/text = "V-Slice"
popup/item_0/id = 0
popup/item_1/text = "Psych v1"
popup/item_1/id = 5
popup/item_2/text = "Pysch v0.7"
popup/item_2/id = 1
popup/item_3/text = "Andromeda Engine"
popup/item_3/id = 2
popup/item_4/text = "Forever Engine"
popup/item_4/id = 3

[node name="HSeparator7" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Save Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Convert Chart File"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="dir_selected" from="SaveFolderDialog" to="." method="_on_save_folder_dialog_dir_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_vocals_button_pressed"]
[connection signal="files_selected" from="VBoxContainer/HBoxContainer/Vocals File Dialog" to="." method="_on_vocals_file_dialog_files_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Button" to="." method="_on_inst_button_pressed"]
[connection signal="file_selected" from="VBoxContainer/HBoxContainer3/Inst File Dialog" to="." method="_on_inst_file_dialog_file_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/Button" to="." method="_on_chart_button_pressed"]
[connection signal="file_selected" from="VBoxContainer/HBoxContainer4/Chart File Dialog" to="." method="_on_chart_file_dialog_file_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer5/Chart Type Button" to="." method="_on_chart_type_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Save Button" to="." method="_on_save_button_pressed"]
